# newsfeed

./: .gitignore  Project2.md  README.md  ai_collaboration.md  authentication-test-instructions.md  design_doc.md  package-lock.json  start-dev.sh
documentation/: authentication-implementation-summary.md  design_doc.md
newsfeed_backend/: asgi.py  manage.py  pyproject.toml  settings.py  urls.py  wsgi.py
newsfeed_backend/api/: models.py  schema.py
newsfeed_backend/api/management/commands/: seed_data.py
newsfeed_backend/api/migrations/: 0001_initial.py  0002_comment_like.py
newsfeed_backend/newsfeed_backend/: asgi.py  settings.py  urls.py  wsgi.py
newsfeed_frontend/: package-lock.json  package.json
newsfeed_frontend/src/app/: globals.css  layout.tsx  page.tsx
newsfeed_frontend/src/app/components/: .gitkeep  AuthModal.tsx  CommentForm.tsx  CommentList.tsx  CreatePostForm.tsx  EditPostForm.tsx  ErrorMessage.tsx  Header.tsx  LoginForm.tsx  PostItem.tsx  PostList.tsx  ProtectedRoute.tsx  SignupForm.tsx
newsfeed_frontend/src/app/components/auth/: AuthModal.tsx  LoginForm.tsx  SignupForm.tsx
newsfeed_frontend/src/app/components/common/: ErrorMessage.tsx
newsfeed_frontend/src/app/components/layout/: Header.tsx
newsfeed_frontend/src/app/components/posts/: CommentForm.tsx  CommentList.tsx  CreatePostForm.tsx  EditPostForm.tsx  PostItem.tsx  PostList.tsx
newsfeed_frontend/src/app/context/: AuthContext.tsx  ThemeContext.tsx
newsfeed_frontend/src/app/lib/: apolloClient.ts  authUtils.ts
