[project]
name = "newsfeed-backend"
version = "0.1.0"
description = "Newsfeed GraphQL Backend"
authors = [
    {name = "ericiscool0",email = "ericchrispolanski@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4"
dependencies = [
    "django (>=5.2.1,<6.0.0)",
    "ariadne (>=0.26.2,<0.27.0)",
    "django-cors-headers (>=4.7.0,<5.0.0)",
    "ariadne-django (>=0.3.0,<0.4.0)",
    "pyjwt (>=2.10.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
